syntax = "proto3";

import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "com.betpawa.wallet.proto";
option java_outer_classname = "WalletProto";
option objc_class_prefix = "WAL";

package proto;

// The wallet server will keep track  of a users monetary balance in the system.
// The client will emulate users depositing and withdrawing funds.
service WalletTransaction {

    rpc registerUser (Wallet.UserId) returns (google.protobuf.Empty);

    rpc call (Wallet.Request) returns (Wallet.Response);

    rpc streamCall (stream Wallet.Request) returns (stream Wallet.Response);
}

message Wallet {
    message Request {
        string userId = 1;
        Operation op = 2;
        double amount = 3;
        Currency currency = 4;
    }

    enum Operation {
        DEPOSIT = 0;
        WITHDRAW = 1;
        BALANCE = 2;
    }

    message UserId {
        string userId = 1;
    }

    message Response {
        bool success = 1;
        string message = 2;
        repeated BalanceResult results = 3;
    }

    message BalanceResult {
        double amount = 1;
        Currency currency = 2;
    }

    enum Currency {
        EUR = 0;
        USD = 1;
        GBP = 2;
    }
}